yamls/anki-syncserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anki-syncserver
spec:
  selector:
    app: anki-syncserver
  ports:
    - protocol: TCP
      port: 8080
      name: http
